--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ CUDA_VISIBLE_DEVICES_EMB=all
 TRANSFORMERS_CACHE=/cache/
 
 # MySQL
-DB_NAME=rag_db  # may be sync with Pasha
+DB_NAME=rag_db
 DB_USER=root
 EMBEDDER_URL=http://embedder:8068
 DB_HOST=mysql
