--- a/k8s-manifests/secrets.yml
+++ b/k8s-manifests/secrets.yml
@@ -4,5 +4,5 @@ metadata:
   name: app-secrets
 type: Opaque
 data:
-  MYSQL_ROOT_PASSWORD: "MTIz"  # "123" в base64
-  GPT_TOKEN: "c2stVFU1azNsaWdrWE9vVkRzOFNGSU1sR1hySmRQa1BrMkw="  # "sk-TU5k3ligkXOoVDs8SFIMlGXrJdPkPk2L" в base64
+  MYSQL_ROOT_PASSWORD: "MTIz"
+  GPT_TOKEN: "sk-xxxxxxxxxxxxxxxxxxxxxxxxx"
